// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppVersion AppVersionDevices 1`] = `
<_default
  devices={
    Array [
      Object {
        "deviceId": "some-device-id-01",
        "deviceType": "ios",
        "owner": "test-user-1",
      },
      Object {
        "deviceId": "some-device-id-02",
        "deviceType": "android",
        "owner": "test-user-1",
      },
      Object {
        "deviceId": "some-device-id-03",
        "deviceType": "ios",
        "owner": "test-user-2",
      },
    ]
  }
  isLoading={false}
  projectType="other"
/>
`;

exports[`AppVersion renders the details tab correctly with UDID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your
     
    <Link
      href="https://app.bitrise.io/me/profile#/test_devices"
      target="_blank"
      underline={true}
    >
      Account Settings
    </Link>
     
    page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableBody>
      <TableRow
        key="test-user-1-some-device-id-01"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UDID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-01
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-1-some-device-id-02"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            android
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UDID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-02
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-2-some-device-id-03"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-2
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UDID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-03
          </Text>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`AppVersion renders the details tab correctly with UUID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your
     
    <Link
      href="https://app.bitrise.io/me/profile#/test_devices"
      target="_blank"
      underline={true}
    >
      Account Settings
    </Link>
     
    page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableBody>
      <TableRow
        key="test-user-1-some-device-id-01"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UUID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-01
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-1-some-device-id-02"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            android
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UUID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-02
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-2-some-device-id-03"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-2
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            UUID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-03
          </Text>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`AppVersion renders the details tab correctly with device ID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your
     
    <Link
      href="https://app.bitrise.io/me/profile#/test_devices"
      target="_blank"
      underline={true}
    >
      Account Settings
    </Link>
     
    page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableBody>
      <TableRow
        key="test-user-1-some-device-id-01"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device ID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-01
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-1-some-device-id-02"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-1
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            android
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device ID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-02
          </Text>
        </TableCell>
      </TableRow>
      <TableRow
        key="test-user-2-some-device-id-03"
      >
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            User
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            test-user-2
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": "none",
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            ios
          </Text>
        </TableCell>
        <TableCell
          style={
            Object {
              "borderBottom": undefined,
              "display": "block",
              "paddingBottom": "0.25rem",
              "paddingTop": "0.25rem",
            }
          }
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Device ID
            :
          </Text>
           
          <Text
            breakOn="all"
            inline={true}
          >
            some-device-id-03
          </Text>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`AppVersion renders the loading skeleton when loading 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your
     
    <Link
      href="https://app.bitrise.io/me/profile#/test_devices"
      target="_blank"
      underline={true}
    >
      Account Settings
    </Link>
     
    page on Bitrise.
  </Notification>
  <Base
    margin="x8"
  >
    <Skeleton
      active={true}
      color="white"
    >
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Base
        paddingHorizontal="x4"
        paddingVertical="x3"
      >
        <SkeletonBox
          backgroundColor="gray-2"
          height="1.5rem"
          margin="x2"
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
    </Skeleton>
  </Base>
</Base>
`;
